# OS

./: .gitignore
A1/: Q1.c  Q2.c  a.out  arg.c  checkingReverse.c  lol.txt  new.txt  reverseString.c  statChecker.c  test.c  textMaker.cpp
A1/Assignment/: text.txt
A2/shell/: CMakeLists.txt  README.md  commandHandler.c  commandHandler.h  main.c
A2/shell/commands/: cd.c  echo.c  generalCommand.c  history.c  history.h  ls.c  ls.h  pinfo.c  pinfo.h
A2/shell/utils/: hud.c  hud.h  inputHandler.c  inputHandler.h  shellStateDef.c  shellStateDef.h
A3/A3_shell/: CMakeLists.txt  README.md  commandHandler.c  commandHandler.h  main.c
A3/A3_shell/commands/: bg.c  bg.h  cd.c  cd.h  echo.c  echo.h  environementSetter.c  environementSetter.h  fg.c  fg.h  generalCommand.c  generalCommand.h  jobs.c  jobs.h  kjob.c  kjob.h  ls.c  pinfo.c
A3/A3_shell/utils/: inputHandler.c  inputHandler.h  piping.c  piping.h  redirection.c  redirection.h  shellStateDef.c  shellStateDef.h  signalHandlers.c  signalHandlers.h
A4/: a.out  input  input2
A4/Q1/: a.out  input100  input1000  input10000  main.c  report.md
A4/Q2/: CMakeLists.txt  main.c  main.h  pharma.c  pharma.h  student.c  student.h  zone.c  zone.h
A4/Q3/: CMakeLists.txt  acoustic.c  acoustic.h  electric.c  electric.h  main.c  main.h  singer.c  singer.h
A4/merge_sort/: CMakeLists.txt  main.c
A5/xv6-public/: decoy.c  defs.h  makefile  proc.c  proc.h  ps.c  setPriority.c  syscall.c  syscall.h  sysproc.c  time.c  trap.c  user.h  usys.S
CSE/Assignment2/: .h.txt.swp  .swp  Readme.md  a.out  bgcheck.c  execute.c  format.c  ls.c  (+7 more)
(+65 files in other folders)
